--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation 'com.yarolegovich:sliding-root-nav:1.1.1'
+    implementation "nl.psdcompany:duo-navigation-drawer:3.0.0"
+
+
 }
