--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
-
 
     <application
         android:allowBackup="true"
@@ -18,10 +18,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FourSquare">
         <activity
-            android:name=".view.AddReview"
-            android:windowSoftInputMode="adjustResize"
+            android:name=".view.SearchActivity"
             android:theme="@style/AddReviewTheme"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustResize"
+            android:exported="true" />
+        <activity
+            android:name=".view.FavouritesActivity"
+            android:exported="true"
+            android:theme="@style/AddReviewTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".view.FeedbackActivity"
+            android:exported="true"
+            android:theme="@style/AddReviewTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".view.AddReview"
+            android:exported="false"
+            android:theme="@style/AddReviewTheme"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".view.ImageDetails"
             android:exported="false" />
@@ -66,7 +81,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
-
     </application>
 
 </manifest>
