--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id("androidx.navigation.safeargs")
     id("dagger.hilt.android.plugin")
     id 'com.google.secrets_gradle_plugin' version '0.4'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -42,6 +43,7 @@ android {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:20.0.4'
     def lifecycle_version = "2.4.0"
     def room_version = "2.4.1"
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -82,6 +84,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:29.0.4')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
 
 }
